src/objects/sb_Actions_Taken__c.object
<CustomObject>
    <description>A list of which actions have been taken by which contacts.</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>Type of action</description>
        <inlineHelpText>Type of action</inlineHelpText>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Message Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_URL__c</fullName>
        <description>This is a link to the action on your website.</description>
        <formula>&quot;https://clientnamehere.gospringboard.com/node/&quot; &amp; TEXT(Action__r.Springboard_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a link to the action on your website.</inlineHelpText>
        <label>Action URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Springboard actions</description>
        <inlineHelpText>A Springboard action.</inlineHelpText>
        <label>Action</label>
        <referenceTo>sb_action__c</referenceTo>
        <relationshipLabel>Actions Taken</relationshipLabel>
        <relationshipName>Actions_Taken</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign this action taken is related to.</description>
        <inlineHelpText>Campaign this action taken is related to.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Actions Taken</relationshipLabel>
        <relationshipName>Actions_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The contact who has taken action.</description>
        <inlineHelpText>This person has taken this action.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Actions Taken</relationshipLabel>
        <relationshipName>Actions_Taken</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Action__c</fullName>
        <description>Date the action was taken.</description>
        <inlineHelpText>Date the action was taken.</inlineHelpText>
        <label>Date of Action</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Browser__c</fullName>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS__c</fullName>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generated_Message_Count__c</fullName>
        <description>The number of messages (deliverable or undeliverable) generated by the action taken</description>
        <inlineHelpText>The number of messages (deliverable or undeliverable) generated by the action taken</inlineHelpText>
        <label>Generated Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Market_Source__c</fullName>
        <description>Initial market source</description>
        <inlineHelpText>Initial market source</inlineHelpText>
        <label>Initial Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Referrer__c</fullName>
        <description>Initial Referrer</description>
        <inlineHelpText>Initial Referrer</inlineHelpText>
        <label>Initial Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Message__c</fullName>
        <description>A link to the actual message in the data warehouse.</description>
        <inlineHelpText>This is a link to the actual message that was sent.</inlineHelpText>
        <label>Link to Message</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Market_Source_Type__c</fullName>
        <description>Market Source Type</description>
        <formula>CASE( LEFT( UPPER( Initial_Market_Source__c ), 3),
&quot;EML&quot;,&quot;Email&quot;,
&quot;WEB&quot;,&quot;Organic Website&quot;,
&quot;BAN&quot;,&quot;Banner Ads&quot;,
&quot;GAD&quot;,&quot;Google Ads&quot;,
&quot;OTH&quot;,&quot;Other&quot;,
&quot;n/a&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Market Source Type</inlineHelpText>
        <label>Market Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Source__c</fullName>
        <description>Market source for this action.</description>
        <inlineHelpText>Market source for this action.</inlineHelpText>
        <label>Market Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the message was edited prior to submission</description>
        <inlineHelpText>Indicates whether or not the message was edited prior to submission</inlineHelpText>
        <label>Message Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P2P_Personal_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The peer to peer personal campaign from which the action originated.</description>
        <label>P2P Personal Campaign</label>
        <referenceTo>P2P_Personal_Campaign__c</referenceTo>
        <relationshipLabel>Actions Taken</relationshipLabel>
        <relationshipName>Actions_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the user take action via QuickSign?</description>
        <inlineHelpText>Did the user take action via QuickSign?</inlineHelpText>
        <label>Quick Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <description>Referrer</description>
        <inlineHelpText>Referrer</inlineHelpText>
        <label>Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <description>Search engine used.</description>
        <inlineHelpText>Search engine used.</inlineHelpText>
        <label>Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <description>Search string</description>
        <inlineHelpText>Search string</inlineHelpText>
        <label>Search String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_ID__c</fullName>
        <description>ID of the webform submission</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the webform submission</inlineHelpText>
        <label>Submission ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <description>User Agent</description>
        <inlineHelpText>User Agent</inlineHelpText>
        <label>User Agent</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <description>Campaign Name</description>
        <inlineHelpText>Campaign Name</inlineHelpText>
        <label>utm_campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>Campaign Content</description>
        <inlineHelpText>Campaign Content</inlineHelpText>
        <label>utm_content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <description>Campaign Medium</description>
        <inlineHelpText>Campaign Medium</inlineHelpText>
        <label>utm_medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <description>Campaign Source</description>
        <inlineHelpText>Campaign Source</inlineHelpText>
        <label>utm_source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>Campaign Term</description>
        <inlineHelpText>Campaign Term</inlineHelpText>
        <label>utm_term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Actions Taken</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Actions Taken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions Taken</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>